updated docx and qmd

--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -345,3 +345,87 @@
 	doi = {10.3389/fpsyg.2020.01145},
 	url = {http://dx.doi.org/10.3389/fpsyg.2020.01145}
 }
+
+@article{garner1983,
+  title={Development and validation of a multidimensional eating disorder inventory for anorexia nervosa and bulimia},
+  author={Garner, David M and Olmstead, Marion P and Polivy, Janet},
+  journal={International journal of eating disorders},
+  volume={2},
+  number={2},
+  pages={15--34},
+  year={1983},
+  publisher={Wiley Online Library}
+}
+
+@article{koike2023,
+  title={Development and Validation of Japanese Versions of the Interoceptive Accuracy Scale and Interoceptive Attention Scale},
+  author={Koike, Hikaru and Nomura, Michio},
+  journal={SAGE Open},
+  volume={13},
+  number={4},
+  pages={21582440231214639},
+  year={2023},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{arslanova2022,
+  title={Seeing through each other’s hearts: Inferring others’ heart rate as a function of own heart rate perception and perceived social intelligence},
+  author={Arslanova, Irena and Galvez-Pol, Alejandro and Kilner, James and Finotti, Gianluca and Tsakiris, Manos},
+  journal={Affective Science},
+  volume={3},
+  number={4},
+  pages={862--877},
+  year={2022},
+  publisher={Springer}
+}  
+  
+@article{morin2016,
+  title={A Bifactor Exploratory Structural Equation Modeling Framework for the Identification of Distinct Sources of Construct-Relevant Psychometric Multidimensionality}, 
+  volume={23}, ISSN={1532-8007}, 
+  url={http://dx.doi.org/10.1080/10705511.2014.961800}, DOI={10.1080/10705511.2014.961800}, 
+  number={1}, 
+  journal={Structural Equation Modeling: A Multidisciplinary Journal}, 
+  publisher={Informa UK Limited}, author={Morin, Alexandre J. S. and Arens, A. Katrin and Marsh, Herbert W.}, 
+  year={2015}, 
+  month=jun, 
+  pages={116–139} }  
+
+@article{todd2022,
+  title={Are some interoceptive sensibility components more central than others? Using item pool visualisation to understand the psychometric representation of interoception},
+  author={Todd, Jennifer and Swami, Viren and Aspell, Jane E and Furnham, Adrian and Horne, George and Stieger, Stefan},
+  journal={Plos one},
+  volume={17},
+  number={12},
+  pages={e0277894},
+  year={2022},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{gaggero2021,
+  title={Clarifying the relationship between alexithymia and subjective interoception},
+  author={Gaggero, Giulia and Bizzego, Andrea and Dellantonio, Sara and Pastore, Luigi and Lim, Mengyu and Esposito, Gianluca},
+  journal={PLoS One},
+  volume={16},
+  number={12},
+  pages={e0261126},
+  year={2021},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{brand2022,
+  title={The differential relationship between self-reported interoceptive accuracy and attention with psychopathology},
+  author={Brand, Sebastian and Petzke, Tara M and Witth{\"o}ft, Michael},
+  journal={Zeitschrift f{\"u}r Klinische Psychologie und Psychotherapie},
+  year={2022},
+  publisher={Hogrefe Verlag}
+}
+
+@article{von2023,
+  title={My social comfort zone: Attachment anxiety shapes peripersonal and interpersonal space},
+  author={Von Mohr, Mariana and Silva, Paulo C and Vagnoni, Eleonora and Bracher, Angelika and Bertoni, Tommaso and Serino, Andrea and Banissy, Michael J and Jenkinson, Paul M and Fotopoulou, Aikaterini},
+  journal={Iscience},
+  volume={26},
+  number={2},
+  year={2023},
+  publisher={Elsevier}
+}
